# plugy-agent

./: README.md  pyproject.toml
.cursor/rules/: 01-project-structure.mdc  02-code-style.mdc  03-api-guidelines.mdc  04-testing.mdc
src/: main.py
